change key: name to username in User schema
