# src/controllers/auth/signup.js
@@ -8,7 +8,7 @@ const { User } = require("../../models/user");
 const { requestError } = require("../../helpers");
 
 const signup = async (req, res) => {
-  const { email, password, name } = req.body;
+  const { email, password, username } = req.body;
 
   const oldUser = await User.findOne({ email });
   if (oldUser) {
@@ -19,7 +19,7 @@ const signup = async (req, res) => {
   const user = await User.create({
     email,
     password: hashPassword,
-    name,
+    username,
   });
 
   const token = jwt.sign({ id: user._id }, SECRET_KEY, {
@@ -31,7 +31,7 @@ const signup = async (req, res) => {
     token,
     user: {
       email: user.email,
-      name: user.name,
+      username: user.username,
       balance: user.balance,
     },
   });
